Fixed margin on large screen with @media qurey & wrapped it around list-item-margin class

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -239,3 +239,10 @@ footer a{
     #top_tabs { display: none; }
     #downloadHeader {display: none;}
 }
+
+@media screen and (max-width: 600px){
+    .list-item-margin
+    {
+    margin: -70px 0px;
+    }
+}
